# datasets

./: .gitignore  .travis.yaml  .travis.yml  Audio.cpp  BinaryFile.cpp  BinaryFile.h  BinaryFileSample.cpp  BvecsReader.h  CMakeLists.txt  Enron.cpp  ExceptionUtils.h  FvecsReader.h  GIST1M.cpp  GIST80M.cpp  GIST80M.m  GIST80M_STD.cpp  Glove.cpp  Hdf5File.h  Makefile  Mnist.cpp  README.md  SIFT1B.cpp  SIFT1B_STD.cpp  SIFT1M.cpp  Timer.hpp  audio  audio-hamming-192.h5  compactbit.m  compare.mat  create_lsh_codes.h  create_lsh_codes_std.h  distance_calculating.ipynb  enron  gaussian_mat.txt  gist1m  gist1m-center.txt  gist1m-for-debug.txt  gist80m  glove  helper.h  (+9 more)
.ipynb_checkpoints/: distance_calculating-checkpoint.ipynb
cmp/: verify.py
datasets/GIST1M/: .gitignore
datasets/SIFT1B/: README.md  bigann_base.bvecs
datasets/audio/: .gitignore
datasets/enron/: .gitignore  convert.py
datasets/glove/: .gitignore  convert.py
datasets/mnist/: .gitignore  convert.py
